<resources>
    <string name="app_name">Oncomed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authentificate">Autentificare</string>
    <string name="email">Email</string>
    <string name="password">Parola</string>
    <string name="no_account_message">Nu ai cont? Apasa pe butonul de mai jos pentru a-ti crea unul.</string>
    <string name="account_exists_message">Ai deja cont? Apasa pe butonul de mai jos pentru a te autentifica.</string>
    <string name="login">Intra in cont</string>
    <string name="register">Inregistreaza-te</string>
    <string name="register_title">Inregistrare</string>
    <string name="first_name">Prenume</string>
    <string name="last_name">Nume</string>
    <string name="cnp">CNP</string>
    <string name="city">Oras</string>
    <string name="telephone">Telefon</string>
    <string name="nav_requests">Cereri inregistrate</string>
    <string name="register_request">Inregistreaza o noua cerere</string>
    <string name="active_substance">Substanta Activa</string>
    <string name="drug_name">Nume Medicament</string>
    <string name="drug_concentration">Concentratie</string>
    <string name="drug_quantity">Cantitate</string>
    <string name="send_request">Trimite Cerere</string>
</resources>
